python-tester/log/compile_error_vec_13.txt
-VECTOR REVERSE ITER TEST-

In file included from ./tmp/outfile_vec_13.cpp:4:
../vector_iterator.hpp:217:162: error: invalid operands to binary expression ('ft::ReverseVectorIterator<ft::VectorIterator<int> >::iterator_type' (aka 'ft::VectorIterator<int>') and 'ft::ReverseVectorIterator<ft::VectorIterator<int> >::iterator_type')
        typename ReverseVectorIterator<Iter>::difference_type operator - (const ReverseVectorIterator<Iter> &l, const ReverseVectorIterator<Iter> &r) { return r.base() - l.base(); }
                                                                                                                                                               ~~~~~~~~ ^ ~~~~~~~~
./tmp/outfile_vec_13.cpp:41:31: note: in instantiation of function template specialization 'ft::operator-<ft::VectorIterator<int> >' requested here
                if (it_rb - it_re != its_rb - its_re)
                                            ^
../vector_iterator.hpp:123:19: note: candidate function not viable: no known conversion from 'ft::ReverseVectorIterator<ft::VectorIterator<int> >::iterator_type' (aka 'ft::VectorIterator<int>') to 'ft::VectorIterator::difference_type' (aka 'long') for 1st argument
                        VectorIterator operator - (difference_type val) const
                                       ^
../vector_iterator.hpp:217:56: note: candidate template ignored: could not match 'ReverseVectorIterator' against 'VectorIterator'
        typename ReverseVectorIterator<Iter>::difference_type operator - (const ReverseVectorIterator<Iter> &l, const ReverseVectorIterator<Iter> &r) { return r.base() - l.base(); }
                                                              ^
1 error generated.
